[project]
name = "kyykka-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Niko Iljin",email = "niko.s.iljin@jyu.fi"},
    {name = "Ilmo Kurki",email = "ilmo.kurki00@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "python-telegram-bot (>=22.3,<23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
